# bostonhacks-muse-backend

./: EEG_recording_2025-10-11-22.24.22.csv  EEG_recording_2025-10-12-00.38.00.csv  EEG_recording_2025-10-12-00.42.47.csv  README.md  print_out_blinks.ipynb  pyproject.toml  requirements.txt  test.py  test_dtw.ipynb
data_store/: example.json  examples.json
src/detector/: detect.py  model.py  muse.py  train.py
src/main/: cli.py  config.py
src/server/: event_router.py  websocket.py
