[project]
name = "bostonhacks-muse-backend"
version = "0.0.0"
authors = [
  { name="Denali Schlesinger", email="dsch28@bu.edu" },
]
description = "Backend for artifact detection and key stroke emission"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
main_loop = "main.cli:main" # Maps 'mytool' command to 'cli' function in mycli.main module
gather_and_train = "detector.train:train"

[project.urls]
Homepage = "https://github.com/dschlesinger/bostonhacks-muse-backend"